--- a/Our.Umbraco.ContentRelations/App_Plugins/ContentRelations/info.html
+++ b/Our.Umbraco.ContentRelations/App_Plugins/ContentRelations/info.html
@@ -1,1 +1,51 @@
-﻿<h1>ContentRelations</h1>
+﻿<div ng-controller="contentRelationsController as vm">
+
+    <umb-load-indicator ng-if="vm.isLoading">
+    </umb-load-indicator>
+
+    <div ng-if="!vm.isLoading">
+
+        <div class="umb-table our_umbraco_redirectsviewer" ng-if="vm.relations.length > 0">
+            <div class="umb-table-head">
+                <div class="umb-table-row">
+                    <div class="umb-table-cell not-fixed">
+                        Node
+                    </div>
+                    <div class="umb-table-cell">
+                        Comment
+                    </div>
+                    <div class="umb-table-cell">
+                        Relation Type
+                    </div>
+                    <div class="umb-table-cell">
+                        Can delete
+                    </div>
+                </div>
+            </div>
+            <div class="umb-table-body">
+                <div class="umb-table-row" ng-repeat="relation in vm.relations">
+                    <div class="umb-table-cell not-fixed">
+                        Node name
+                    </div>
+                    <div class="umb-table-cell">
+                        test
+                        {{item.createDateUtc | date: "dd/MM/yyyy 'at' h:mma"}}
+                    </div>
+                    <div class="umb-table-cell">
+                        {{relation.relationType.name}}
+                    </div>
+                    <div class="umb-table-cell">
+                        False
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+
+        <umb-empty-state ng-if="vm.relations.length === 0"
+                         position="center">
+            No relations found for this page
+        </umb-empty-state>
+    </div>
+</div>
