Add ContentMappings and add to Relation

--- a/Our.Umbraco.ContentRelations.Site/App_Plugins/ContentRelations/info.html
+++ b/Our.Umbraco.ContentRelations.Site/App_Plugins/ContentRelations/info.html
@@ -25,7 +25,7 @@
             <div class="umb-table-body">
                 <div class="umb-table-row" ng-repeat="relation in vm.relations">
                     <div class="umb-table-cell not-fixed">
-                        Node name
+                        {{relation.content.name}}
                     </div>
                     <div class="umb-table-cell">
                         test
