--- a/Our.Umbraco.ContentRelations.Site/App_Plugins/ContentRelations/info.html
+++ b/Our.Umbraco.ContentRelations.Site/App_Plugins/ContentRelations/info.html
@@ -5,7 +5,7 @@
 
     <div ng-if="!vm.isLoading">
 
-        <div class="umb-table our_umbraco_redirectsviewer" ng-if="vm.relations.length > 0">
+        <div class="umb-table" ng-if="vm.relations.length > 0">
             <div class="umb-table-head">
                 <div class="umb-table-row">
                     <div class="umb-table-cell not-fixed">
