--- a/Our.Umbraco.ContentRelations.Site/App_Plugins/ContentRelations/backoffice/contentrelationssettings/settingsdashboard.html
+++ b/Our.Umbraco.ContentRelations.Site/App_Plugins/ContentRelations/backoffice/contentrelationssettings/settingsdashboard.html
@@ -1,1 +1,29 @@
-﻿<h1>Settings Dashboard</h1>
+﻿<div>
+
+    <umb-editor-view footer="false">
+
+        <div class="umb-editor-header">
+            <div class="flex items-center" style="height: 100%;">
+                <div class="flex items-center" style="flex: 1;">
+                    <div class="umb-editor-header__name-and-description" style="flex: 1 1 auto;">
+                        <div class="umb-panel-header-name">Content Relations</div>
+                        <div class="umb-panel-header-locked-description">1.0.1-alpha02</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <umb-editor-container>
+            <umb-box>
+                <umb-box-header title-key="contentRelationsPermissions_headerText">
+                </umb-box-header>
+                <umb-box-content>
+                    <p>Content relations content app permissions can be set here</p>
+                </umb-box-content>
+            </umb-box>
+
+        </umb-editor-container>
+
+    </umb-editor-view>
+
+</div>
