--- a/Our.Umbraco.ContentRelations.Site/App_Plugins/ContentRelations/backoffice/contentrelationssettings/settingsdashboard.html
+++ b/Our.Umbraco.ContentRelations.Site/App_Plugins/ContentRelations/backoffice/contentrelationssettings/settingsdashboard.html
@@ -1,5 +1,4 @@
 ﻿<div>
-
     <umb-editor-view footer="false">
 
         <div class="umb-editor-header">
@@ -21,6 +20,14 @@
                     <p>Content relations content app permissions can be set here</p>
                 </umb-box-content>
             </umb-box>
+
+            <umb-box>
+                <umb-box-header title-key="contentRelationsPermissions_deletePermission"></umb-box-header>
+                <umb-box-content>
+                    Delete permissions can be set here 
+                </umb-box-content>
+            </umb-box>
+
 
         </umb-editor-container>
 
