--- a/Our.Umbraco.ContentRelations/App_Plugins/ContentRelations/backoffice/contentrelationssettings/settingsdashboard.html
+++ b/Our.Umbraco.ContentRelations/App_Plugins/ContentRelations/backoffice/contentrelationssettings/settingsdashboard.html
@@ -22,10 +22,9 @@
             </umb-box>
 
             <umb-box>
-                <umb-box-header title-key="contentRelationsPermissions_deletePermission">
-                </umb-box-header>
+                <umb-box-header title-key="contentRelationsPermissions_deletePermission"></umb-box-header>
                 <umb-box-content>
-                    <p>Delete permissions can be set here</p>
+                    Delete permissions can be set here 
                 </umb-box-content>
             </umb-box>
 
