Create settings controller and user groups resource

--- a/Our.Umbraco.ContentRelations.Site/App_Plugins/ContentRelations/backoffice/contentrelationssettings/settingsdashboard.html
+++ b/Our.Umbraco.ContentRelations.Site/App_Plugins/ContentRelations/backoffice/contentrelationssettings/settingsdashboard.html
@@ -1,4 +1,4 @@
-﻿<div>
+﻿<div ng-controller="contentRelationsSettingsController as vm">
     <umb-editor-view footer="false">
 
         <div class="umb-editor-header">
