--- a/Our.Umbraco.ContentRelations/App_Plugins/ContentRelations/backoffice/contentrelationssettings/settingsdashboard.html
+++ b/Our.Umbraco.ContentRelations/App_Plugins/ContentRelations/backoffice/contentrelationssettings/settingsdashboard.html
@@ -6,7 +6,7 @@
                 <div class="flex items-center" style="flex: 1;">
                     <div class="umb-editor-header__name-and-description" style="flex: 1 1 auto;">
                         <div class="umb-panel-header-name">Content Relations</div>
-                        <div class="umb-panel-header-locked-description">1.0.1-alpha02</div>
+                        <div class="umb-panel-header-locked-description" ng-if="vm.packageInfo.version">{{vm.packageInfo.version}}</div>
                     </div>
                 </div>
             </div>
