--- a/Our.Umbraco.ContentRelations/App_Plugins/ContentRelations/info.html
+++ b/Our.Umbraco.ContentRelations/App_Plugins/ContentRelations/info.html
@@ -7,7 +7,8 @@
                         type="button"
                         button-style="info"
                         action="vm.addRelation()"
-                        label="Add Relation">
+                        label="Add Relation",
+                        label-key="default_addRelation">
             </umb-button>
         </umb-editor-sub-header-content-left>
 
