--- a/Our.Umbraco.ContentRelations/App_Plugins/ContentRelations/backoffice/contentrelationssettings/settingsdashboard.html
+++ b/Our.Umbraco.ContentRelations/App_Plugins/ContentRelations/backoffice/contentrelationssettings/settingsdashboard.html
@@ -17,14 +17,18 @@
                 <umb-box-header title-key="contentRelationsPermissions_headerText">
                 </umb-box-header>
                 <umb-box-content>
-                    <p>Content relations content app permissions can be set here</p>
+                    <p>
+                        <localize key="contentRelationsPermissions_generalText">Content relations content app permissions can be set here.</localize>
+                    </p>
                 </umb-box-content>
             </umb-box>
 
             <umb-box>
                 <umb-box-header title-key="contentRelationsPermissions_deletePermission"></umb-box-header>
                 <umb-box-content>
-                    Delete permissions can be set here
+                    <p>
+                        <localize key="contentRelationsPermissions_deleteText">Delete permissions can be set here.</localize>
+                    </p>
                     <div class="umb-table">
                         <div class="umb-table-body">
                             <div class="umb-table-row" ng-repeat="item in vm.deleteGroups">
